Reduced map description width to avoid overlapping with the map in getting to manzanillo section

--- a/assets/stylesheets/config/mobile/android/_getting_manzanillo.css.scss
+++ b/assets/stylesheets/config/mobile/android/_getting_manzanillo.css.scss
@@ -31,6 +31,7 @@
     #map-container .map-legend {
       left: 15px;
       top: -174px;
+      width: 250px;
     }
 
     #help .content-information .title {
@@ -83,7 +84,7 @@
 
     #map-container .map-legend {
       left: -10px;
-      top: -160px;
+      top: -147px;
     }
   }
 }
